# CGR

./: .gitignore  colinha.txt
boneco/: boneco  boneco.c
boneco/src/: boneco.c
castelo/include/glad/: glad.h
castelo/src/: castelo  castelo.c  glad.c  robo.c
chuva/: chuva  chuva.c
estrelinhas/: estrelinhas  estrelinhas.c
novelo/: novelo  novelo.c  novelo.mtl
robo/: robo  robo.c
trabalhofinal/: CMakeLists.txt  build.sh  trabalhofinal
trabalhofinal/include/: camera.h  mathutils.h  mesh.h  profile.h  shader.h  sweep.h  texture.h
trabalhofinal/shaders/: fragment.glsl  vertex.glsl
trabalhofinal/src/: camera.c  main.c  mesh.c  profile.c  shader.c  sweep.c  texture.c
